# codec

./: CMakeLists.txt
src/boe/: BoeHeaderPacket.h  CMakeLists.txt  boeCodec.cpp  boeCodec.h  boeConstants.h  cancelOrderBits.h  modifyOrderBits.h  newOrderBits.h  orderMsgBits.h  tradeCaptureBits.h  venue.xml
src/boe/packets/: BoeBitfieldPacket.h  BoeBitfieldParamGroupPacket.h  BoeCancelCorrectPacket.h  BoeCancelOrderPacket.h  BoeCancelRejectedPacket.h  BoeClientHeartbeatPacket.h  BoeCustomGroupIDPacket.h  BoeHeaderPacket.h  BoeLoginRequestPacket.h  BoeLoginResponsePacket.h  BoeLoginResponseUnitGroupPacket.h  BoeLogoutResponsePacket.h  BoeModifyOrderPacket.h  BoeNewOrderPacket.h  BoeOrderAcknowledgementPacket.h  BoeOrderCancelledPacket.h  BoeOrderExecutionPacket.h  BoeOrderModifiedPacket.h  BoeOrderRejectedPacket.h  BoeOrderRestatedPacket.h  BoeOrderRestatementPacket.h  BoePacketUtils.h  BoePackets.h  BoeParamGroupHeaderPacket.h  BoeParamGroupsPacket.h  BoePurgeOrderPacket.h  BoePurgeRejectedPacket.h  BoeReplayCompletePacket.h  BoeReturnBitfieldPacket.h  BoeServerHeartbeatPacket.h  BoeSideGroupPacket.h  BoeTradeCancelCorrectPacket.h  BoeTradeCaptureConfirmPacket.h  BoeTradeCapturePacket.h  BoeTradeCaptureReportAcknowledgementPacket.h  BoeTradeCaptureReportDeclinePacket.h  BoeTradeCaptureReportPacket.h  BoeTradeCaptureReportRejectPacket.h  BoeUnitGroupPacket.h  BoeUnitSequencePacket.h  (+5 more)
src/boe/templates/: .codec_cpp.t.swp  .gen_codec.swm  .gen_codec.swn  .gen_codec.swo  .gen_codec.swp  codec_cpp.t  codec_h.t  composite_packet_h.t  gen_codec  group_packet_h.t  (+3 more)
(+4 files in other folders)
